Fin pagina acerca.html

--- a/acerca.html
+++ b/acerca.html
@@ -141,23 +141,51 @@
             <div class="w-100 mb-5"></div>
 
 
-            <div class="col-md-8 col-lg-4 d-flex align-items-center mt-5 mb-5">
-                <div>
-                    <p class="text-uppercase t11 mb-2">Políticas de Calidad</p>
-                    <p class="text-justify">Estamos mejorando continuamente nuestros servicios para satisfacer
-                        las
-                        necesidades y
-                        expectativas
-                        de
-                        nuestros asociados, sus familias y demás grupos de interés, generando creación de valor
-                        sostenible.
-                    </p>
+
+
+
+
+
+
+
+
+            <div class="col-12">
+                <div class="row justify-content-around">
+
+                    <div class="col-md-10 col-xl-5 d-flex align-items-center">
+                        <div>
+                            <p class="text-uppercase t11 mb-2">Políticas de Calidad</p>
+                            <p class="text-justify">Estamos mejorando continuamente nuestros servicios para satisfacer
+                                las
+                                necesidades y
+                                expectativas
+                                de
+                                nuestros asociados, sus familias y demás grupos de interés, generando creación de valor
+                                sostenible.
+                            </p>
+                        </div>
+                    </div>
+                    
+                    <div class="col-xl-2 d-none d-xl-block">
+                        <div class="d-flex align-items-center">
+                                <img class="img-fluid" src="img/success.jpg" alt="">
+
+                        </div>
+                    </div>
                 </div>
             </div>
 
-            <div class="col-lg-2 d-none d-lg-block">
-                <img class="img-fluid" src="img/success.jpg" alt="">
-            </div>
+
+
+
+
+
+
+
+
+
+
+
 
             <div class="w-100"></div>
             <div class="col-12 d-flex justify-content-center align-items-center p-5">
