--- a/acerca.html
+++ b/acerca.html
@@ -82,7 +82,7 @@
 
             <div id="quienes" class="d-flex align-items-center justify-content-center">
                 <div class="col-sm-10 col-lg-8">
-                    <p class="text-uppercase title2">¿Quines somos?</p>
+                    <p class="text-uppercase title2">¿Quiénes somos?</p>
                     <p class="text-justify">Somos una organización sin ánimo de lucro, de interés social,
                         perteneciente al
                         sector
