--- a/acerca.html
+++ b/acerca.html
@@ -82,7 +82,7 @@
         <div class="row text-dark justify-content-around">
 
             <div id="quienes" class="d-flex align-items-center justify-content-center">
-                <div class="col-sm-10 col-lg-8">
+                <div class="col-sm-10 col-lg-8" data-aos="zoom-in">
                     <p class="title">¿Quiénes somos?</p>
                     <p class="text-justify">Somos una organización sin ánimo de lucro, de interés social,
                         perteneciente al
@@ -105,7 +105,7 @@
             </div>
 
             <div id="vision" class="d-flex align-items-center justify-content-center">
-                <div class="col-md-5 text-center">
+                <div class="col-md-5 text-center" data-aos="fade-right">
                     <h3 class="title ">Visión</h3>
                     <p class="text-justify">
                         La Cooperativa <em></em>"<strong>COOMUTRANSTUR</strong>"</em> se consolidará como una empresa
@@ -122,7 +122,7 @@
             </div>
 
             <div id="mision" class="d-flex align-items-center justify-content-center">
-                <div class="col-md-5 text-center">
+                <div class="col-md-5 text-center" data-aos="fade-left">
                     <h3 class="title">Misión</h3>
                     <p class="text-justify">
                         Contribuir al crecimiento económico, social, educativo y cultural de los asociados y sus
@@ -137,7 +137,7 @@
             </div>
 
             <div class="w-100 mb-5"></div>
-            <div class="col-12">
+            <div class="col-12" data-aos="zoom-in">
                 <div class="row justify-content-around">
 
                     <div class="col-md-10 col-xl-5 d-flex align-items-center">
@@ -164,7 +164,7 @@
             </div>
 
             <div class="w-100"></div>
-            <div class="col-12 d-flex justify-content-center align-items-center p-5">
+            <div class="col-12 d-flex justify-content-center align-items-center p-5" data-aos="fade-up">
                 <h5 class="text-center pl-5">
                     <strong class="text-success"> Valores corporativos:</strong>
                 </h5>
@@ -187,7 +187,7 @@
                     PRINCIPIOS CORPORATIVOS
                 </h3>
                 <ol class="text-justify">
-                    <li>
+                    <li data-aos="fade-right" data-aos-delay="50">
                         Asociación voluntaria y abierta: Las cooperativas son asociaciones voluntarias y abiertas
                         para
                         todas aquellas personas dispuestas a utilizar sus servicios y de aceptar las
@@ -195,7 +195,7 @@
                         que
                         conlleva la membresía con equidad social.
                     </li>
-                    <li>
+                    <li data-aos="fade-right" data-aos-delay="50">
                         Control democrático por los socios: Las cooperativas son organizaciones democráticas
                         controladas
                         por sus miembros quienes participan activamente en la definición de las políticas y en la
@@ -205,7 +205,7 @@
                         todos
                         tienen igual derecho de voto.
                     </li>
-                    <li>
+                    <li data-aos="fade-right" data-aos-delay="50">
                         Participación económica de los socios: Los asociados capitalizan de manera equitativa y
                         controlan
                         democráticamente la Cooperativa. Por lo menos una parte de su capital será de propiedad
@@ -213,7 +213,7 @@
                         de la
                         Cooperativa.
                     </li>
-                    <li>
+                    <li data-aos="fade-right" data-aos-delay="50">
                         Autonomía e independencia: Las cooperativas son organizaciones autónomas de ayuda mutua,
                         controladas por sus asociados. Si entran en acuerdos con otras organizaciones (incluyendo
                         gobiernos) o tienen capital de fuentes externas, lo realizan en términos que aseguren el
@@ -223,7 +223,7 @@
                         que
                         se da a sí mismo su ley y que tiene la libertad de gobernarse por sus propias normas.
                     </li>
-                    <li>
+                    <li data-aos="fade-right" data-aos-delay="50">
                         Educación, capacitación e información: Brindar educación y capacitación a sus asociados, a
                         sus
                         dirigentes electos, gerentes y empleados, de tal forma que contribuyan eficazmente al
@@ -232,7 +232,7 @@
                         jóvenes y
                         creadores de opinión, acerca de la naturaleza y beneficios del Cooperativismo
                     </li>
-                    <li>
+                    <li data-aos="fade-right" data-aos-delay="50">
                         Cooperación entre cooperativas: Este principio permite consolidar y proyectar el ámbito
                         empresarial
                         y social de la cooperativa en entornos más amplios, mediante la colaboración práctica y
@@ -243,7 +243,7 @@
                         de
                         estructuras locales, nacionales e internacionales".
                     </li>
-                    <li>
+                    <li data-aos="fade-right" data-aos-delay="50">
                         Compromiso con la comunidad: Las cooperativas trabajan para el desarrollo sostenible de la
                         comunidad por medio de políticas aceptadas por sus asociados". Si bien las cooperativas
                         están
@@ -262,25 +262,23 @@
 
 
     <!-- Footer  -->
-    <section id="footer">
-        <div class="row">
-            <div class="col-12 text-center">
-                <p>COOPERATIVA MULTIATIVA DE TRANSPORTE TURISTICO EN EL CORREGIMIENTO DE CORDOBA Y SAN CIPRIANO</p>
-            </div>
-            <div class="col-6 d-flex align-items-center justify-content-end">
-                <p class="d-inline">
-                    <em>NIT: 830.500.789-9</em>
-                </p>
-            </div>
-            <div class="col-6 d-flex align-items-center justify-content-start">
-                <span style="font-size: 2em;">
-                    <a href="https://www.facebook.com/coomutranstur/" target="_blank"><i class="fab fa-facebook"></i></a>
-                    <a href="https://www.instagram.com/coomutranstur/" target="_blank"><i class="fab fa-instagram"></i></a>
-                    <a href="https://twitter.com/coomutranstur" target="_blank"><i class="fab fa-twitter-square"></i></a>
-                </span>
-            </div>
+    <div id="footer" class="row">
+        <div class="col-12 text-center">
+            <p>COOPERATIVA MULTIATIVA DE TRANSPORTE TURISTICO EN EL CORREGIMIENTO DE CORDOBA Y SAN CIPRIANO</p>
         </div>
-    </section>
+        <div class="col-6 d-flex align-items-center justify-content-end">
+            <p class="d-inline">
+                <em>NIT: 830.500.789-9</em>
+            </p>
+        </div>
+        <div class="col-6 d-flex align-items-center justify-content-start">
+            <span style="font-size: 2em;">
+                <a href="https://www.facebook.com/coomutranstur/" target="_blank"><i class="fab fa-facebook"></i></a>
+                <a href="https://www.instagram.com/coomutranstur/" target="_blank"><i class="fab fa-instagram"></i></a>
+                <a href="https://twitter.com/coomutranstur" target="_blank"><i class="fab fa-twitter-square"></i></a>
+            </span>
+        </div>
+    </div>
 
 
     <!-- Scripts -->
@@ -289,7 +287,10 @@
     <script src="js/aos.js"></script>
 
     <script>
-        AOS.init();
+        AOS.init({
+            duration: 1000,
+            once: true
+        });
     </script>
     <script>
 
