--- a/acerca.html
+++ b/acerca.html
@@ -17,7 +17,7 @@
 
 <body>
     <!-- INDEX -->
-    <section class="container-fluid pl-0 pr-0" id="">
+    <section class="container-fluid pl-0 pr-0">
         <div class="">
             <div class="">
                 <header class="">
@@ -71,7 +71,7 @@
     <div id="intro" class="container-fluid d-flex align-items-center justify-content-center">
 
         <div id="scene">
-            <div data-depth=".5" data-hover-only> <img id="logo-acerca" src="img/logo.png" alt=""></div>
+            <div data-depth=".5" data-clip-relative-input="false"> <img id="logo-acerca" src="img/logo.png" alt=""></div>
         </div>
 
     </div>
@@ -285,18 +285,23 @@
     <script src="js/bootstrap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/parallax/3.1.0/parallax.min.js"></script>
     <script src="js/aos.js"></script>
+    <script src="js/app.js"></script>
 
     <script>
         AOS.init({
             duration: 1000,
             once: true
         });
-    </script>
-    <script>
 
         var scene = document.getElementById('scene');
-        var parallaxInstance = new Parallax(scene);
+        var parallaxInstance = new Parallax(scene, {
+            hoverOnly: true,
+            // relativeInput: true,
+            // clipRelativeInput: true
+        });
         parallaxInstance.invert(false, false);
+        parallaxInstance.limit (30, 1000);
+
     </script>
 </body>
 
