--- a/acerca.html
+++ b/acerca.html
@@ -105,7 +105,7 @@
             </div>
 
             <div id="vision" class="d-flex align-items-center justify-content-center">
-                <div class="col-md-5 text-center" data-aos="fade-right">
+                <div class="col-md-5 text-center" data-aos="zoom-in">
                     <h3 class="title ">Visión</h3>
                     <p class="text-justify">
                         La Cooperativa <em></em>"<strong>COOMUTRANSTUR</strong>"</em> se consolidará como una empresa
@@ -122,7 +122,7 @@
             </div>
 
             <div id="mision" class="d-flex align-items-center justify-content-center">
-                <div class="col-md-5 text-center" data-aos="fade-left">
+                <div class="col-md-5 text-center" data-aos="zoom-in">
                     <h3 class="title">Misión</h3>
                     <p class="text-justify">
                         Contribuir al crecimiento económico, social, educativo y cultural de los asociados y sus
@@ -187,7 +187,7 @@
                     PRINCIPIOS CORPORATIVOS
                 </h3>
                 <ol class="text-justify">
-                    <li data-aos="fade-right" data-aos-delay="50">
+                    <li data-aos="fade-up" data-aos-delay="50">
                         Asociación voluntaria y abierta: Las cooperativas son asociaciones voluntarias y abiertas
                         para
                         todas aquellas personas dispuestas a utilizar sus servicios y de aceptar las
@@ -195,7 +195,7 @@
                         que
                         conlleva la membresía con equidad social.
                     </li>
-                    <li data-aos="fade-right" data-aos-delay="50">
+                    <li data-aos="fade-up" data-aos-delay="50">
                         Control democrático por los socios: Las cooperativas son organizaciones democráticas
                         controladas
                         por sus miembros quienes participan activamente en la definición de las políticas y en la
@@ -205,7 +205,7 @@
                         todos
                         tienen igual derecho de voto.
                     </li>
-                    <li data-aos="fade-right" data-aos-delay="50">
+                    <li data-aos="fade-up" data-aos-delay="50">
                         Participación económica de los socios: Los asociados capitalizan de manera equitativa y
                         controlan
                         democráticamente la Cooperativa. Por lo menos una parte de su capital será de propiedad
@@ -213,7 +213,7 @@
                         de la
                         Cooperativa.
                     </li>
-                    <li data-aos="fade-right" data-aos-delay="50">
+                    <li data-aos="fade-up" data-aos-delay="50">
                         Autonomía e independencia: Las cooperativas son organizaciones autónomas de ayuda mutua,
                         controladas por sus asociados. Si entran en acuerdos con otras organizaciones (incluyendo
                         gobiernos) o tienen capital de fuentes externas, lo realizan en términos que aseguren el
@@ -223,7 +223,7 @@
                         que
                         se da a sí mismo su ley y que tiene la libertad de gobernarse por sus propias normas.
                     </li>
-                    <li data-aos="fade-right" data-aos-delay="50">
+                    <li data-aos="fade-up" data-aos-delay="50">
                         Educación, capacitación e información: Brindar educación y capacitación a sus asociados, a
                         sus
                         dirigentes electos, gerentes y empleados, de tal forma que contribuyan eficazmente al
@@ -232,7 +232,7 @@
                         jóvenes y
                         creadores de opinión, acerca de la naturaleza y beneficios del Cooperativismo
                     </li>
-                    <li data-aos="fade-right" data-aos-delay="50">
+                    <li data-aos="fade-up" data-aos-delay="50">
                         Cooperación entre cooperativas: Este principio permite consolidar y proyectar el ámbito
                         empresarial
                         y social de la cooperativa en entornos más amplios, mediante la colaboración práctica y
@@ -243,7 +243,7 @@
                         de
                         estructuras locales, nacionales e internacionales".
                     </li>
-                    <li data-aos="fade-right" data-aos-delay="50">
+                    <li data-aos="fade-up" data-aos-delay="50">
                         Compromiso con la comunidad: Las cooperativas trabajan para el desarrollo sostenible de la
                         comunidad por medio de políticas aceptadas por sus asociados". Si bien las cooperativas
                         están
