eliminacion de basura
logos no usados

--- a/turismo.html
+++ b/turismo.html
@@ -27,7 +27,7 @@
 
 <body>
     <!-- INDEX -->
-    <section class="container-fluid pl-0 pr-0" id="">
+    <section class="container-fluid pl-0 pr-0">
         <div class="">
             <div class="">
                 <header class="">
