avancito de turismo

--- a/turismo.html
+++ b/turismo.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    
+
     <link rel="icon" type="image/png" href="img/logo.png" />
 
     <title>COOMUSTRANSTUR</title>
@@ -78,14 +78,20 @@
                 <!-- texto main -->
     </section>
 
+    <section id="inicio">
+        <div class="container-fluid pl-0 pr-0">
+            <div id="img_intro_turismo" class="d-flex justify-content-center align-items-center">
+                <h2>Guía Turística</h2>
+            </div>
+        </div>
+    </section>
+
 
     <main>
 
         <div>
             <img class="lazy" data-src="https://picsum.photos/700" alt="">
             <img class="lazy" data-src="https://picsum.photos/600" alt="">
-            <img class="lazy" data-src="https://picsum.photos/800" alt="">
-            <img class="lazy" data-src="https://picsum.photos/900" alt="">
         </div>
 
     </main>
@@ -96,7 +102,7 @@
     <script type="text/javascript" src="js/jquery.lazy.min.js"></script>
 
     <script>
-        
+
     </script>
 
     <script src="js/bootstrap.min.js"></script>
